--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#" style="color: grey;">Nourriture</a>
+              <a class="nav-link active" aria-current="page" href="nourriture.html" style="color: grey;">Nourriture</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" style="color: grey;">Sport</a>
+              <a class="nav-link" href="sport.html" style="color: grey;">Sport</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" style="color: grey;">Sommeil</a>
+              <a class="nav-link" href="Sommeil.html" style="color: grey;">Sommeil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" style="color: grey;">Blog</a>
+              <a class="nav-link" href="Blog.html" style="color: grey;">Blog</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: grey;">
