--- a/nourriture.html
+++ b/nourriture.html
@@ -11,7 +11,6 @@
   <body>
 
     <nav class="navbar navbar-expand-lg bg-light">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bstarget="#navbarTogglerDemo01" ariacontrols="navbarTogglerDemo01" ariaexpanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button> 
       <div class="container-fluid">
         <a class="navbar-brand" href="#" style="color: grey;">Accueil</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,16 +19,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#" style="color: grey;">Nourriture</a>
+              <a class="nav-link active" aria-current="page" href="nourriture.html" style="color: grey;">Nourriture</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" style="color: grey;">Sport</a>
+              <a class="nav-link" href="sport.html" style="color: grey;">Sport</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" style="color: grey;">Sommeil</a>
+              <a class="nav-link" href="Sommeil.html" style="color: grey;">Sommeil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" style="color: grey;">Blog</a>
+              <a class="nav-link" href="Blog.html" style="color: grey;">Blog</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: grey;">
@@ -46,7 +45,6 @@
         </div>
       </div>
     </nav>
-
     <div class="col-md-8 offset-md-3">
       <p><h1> Repas de la journée </h1></p>
       <div class="card">
