--- a/Sommeil.html
+++ b/Sommeil.html
@@ -6,44 +6,41 @@
       <meta name="viewport" content="width=device-width, initialscale=1">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="./acceuil.html" style="color: grey;">Accueil</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./nourriture.html" style="color: grey;">Nourriture</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./sport.html" style="color: grey;">Sport</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: grey;">Sommeil</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: grey;">Blog</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: grey;">
-                      A propos
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="./equipe.html">Equipe</a></li>
-                      <li><a class="dropdown-item" href="./contact.html">contact</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bstarget="#navbarTogglerDemo01" ariacontrols="navbarTogglerDemo01" ariaexpanded="false" aria-label="Togglenavigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-        </nav>
-
+      <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#" style="color: grey;">Accueil</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="nourriture.html" style="color: grey;">Nourriture</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sport.html" style="color: grey;">Sport</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Sommeil.html" style="color: grey;">Sommeil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Blog.html" style="color: grey;">Blog</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: grey;">
+                A propos
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
         <br/>
 
         <div class="col-md-8 offset-md-3">
